Deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: smartcard
  name: smartcard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartcard
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: smartcard
    spec:
      containers:
      - image: smartcard
        name: nginx
        resources: {}
status: {}
