Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: smartcard
spec:
  ingressClassName: nginx
  rules:
  - host: smartcard.saksiam.co.th
    http:
      paths:
      - backend:
          service:
            name: smartcard
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
